[tool.poetry]
name = "gookme"
version = "0.1.0"
description = ""
authors = ["LMaxence <lecanu.maxence@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs-material = "^9.5.33"
mkdocs = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
